# julia-shell

./: .README.md.swp  .dockerignore  .env.example  .env.infisical.example  .gitignore  .gitignore.swp  .stylelintrc.json  AGENTS.md  Containerfile  README.md  SKILL.md  Transcript.md  astro.config.mjs  biome.json  package.json  podman-compose.yml  renovate.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: .container-publish.yml.swp  .pr-checks.yml.swp  agent-pr-checks.yml  agent-publish.yml  agent-release.yml  container-publish.yml  pr-checks.yml  server-pr-checks.yml  server-publish.yml  server-release.yml
.playwright-cli/: page-2026-03-07T15-47-25-528Z.yml  page-2026-03-07T15-47-38-143Z.yml  page-2026-03-07T15-47-48-925Z.yml  page-2026-03-07T15-47-51-619Z.yml
apps/agent/: .env.example  Cargo.toml  README.md  build.rs  package.json  start-agent.ps1  start-agent.sh
apps/agent/packaging/linux/: nfpm.yaml
apps/agent/packaging/windows/: julia-agent.iss
apps/agent/src/: auth.rs  config.rs  main.rs  storage.rs
docs/: .agent-architecture-plan.md.swp  agent-architecture-plan.md  bun-monorepo-migration-plan.md  client-optimization-widget-packages-plan.md
scripts/: cleanup-workspace.mjs  compress-dist.mjs  prepare-workspace.mjs  reset-runtime.mjs
tests/: channel-auth.test.ts  core-repository.test.ts  module-bus.test.ts  secret-provider.test.ts  secrets.test.ts  shell-layout.test.ts  shell-skeleton.test.ts  shell-store.test.ts  transcribe-module.test.ts  transcribe-repository.test.ts  validate-manifest.test.ts  widget-registration.test.ts
(+632 files in other folders)
