[package]
name = "julia-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
prost = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "time", "fs"] }
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[build-dependencies]
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"
